--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.11",
+    "firebase": "^9.10.0",
+    "framer-motion": "^7.3.6",
+    "moment": "^2.29.4",
     "next": "12.3.1",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.15.1",
+    "react-moment": "^1.1.2",
+    "recoil": "^0.7.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
